force-app/main/default/objects/custom_create4__c/custom_create4__c.object-meta.xml
<CustomObject>
    <label>Custom created object4</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects4</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>