force-app/main/default/objects/custom_create4__c/fields/custom_create_4field534__c.field-meta.xml
<CustomField>
    <fullName>custom_create_4field534__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 4field534</label>
    <type>Checkbox</type>
</CustomField>